Update main.css to adjust navbar and topbar widths for improved layout and centering. Set widths to fixed values and applied auto margins for better alignment across different screen sizes.

--- a/css/main.css
+++ b/css/main.css
@@ -27,18 +27,18 @@ body {
 /* Navigation */
 .navbar {
     padding: 2rem;
-    width: 100%;
+    width: 1200px;
     display: flex;
     align-items: center;
     justify-content: center;
     top: 0;
-    margin: 0;
+    margin: 0 auto;
     z-index: 1000;
     background: var(--primary-red);
 }
 
 .topbar {
-    width: 100%;
+    width: 1200px;
     background: #fff;
     display: flex;
     align-items: center;
@@ -48,6 +48,7 @@ body {
     z-index: 2000;
     position: relative;
     gap: 0.3rem;
+    margin: 0 auto;
 }
 .topbar-logo {
     margin-bottom: 0.1rem;
